--- a/package.json
+++ b/package.json
@@ -11,31 +11,22 @@
     "antd": "^5.6.3",
     "axios": "^0.21.4",
     "connected-react-router": "^6.9.3",
-    "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
+    "framer-motion": "^10.16.4",
     "history": "^4.7.2",
-    "jsqr": "^1.4.0",
     "lodash": "^4.17.21",
-    "qr-scanner": "^1.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-google-recaptcha": "^3.1.0",
-    "react-html5-camera-photo": "^1.5.11",
     "react-icons": "^4.10.1",
     "react-multi-carousel": "^2.8.4",
-    "react-qr-reader": "^3.0.0-beta-1",
-    "react-qr-scanner": "^1.0.0-alpha.11",
-    "react-recaptcha-google": "^1.1.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "8.0.2",
-    "react-validation": "^3.0.7",
-    "react-web-qr-reader": "^1.0.4",
-    "react-webcam": "^7.1.1",
     "redux": "^4.1.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.39.0",
+    "source-map-js": "^1.0.2",
     "uifx": "^2.0.7",
     "validator": "^13.11.0",
     "web-vitals": "^1.1.2"
