--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^0.21.4",
     "connected-react-router": "^6.9.3",
     "dotenv": "^16.3.1",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^4.1.17",
     "history": "^4.7.2",
     "lodash": "^4.17.21",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.10.1",
@@ -23,6 +25,7 @@
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "8.0.2",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.1.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.39.0",
