--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.6.3",
     "axios": "^0.21.4",
     "connected-react-router": "^6.9.3",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "framer-motion": "^4.1.17",
     "history": "^4.7.2",
