--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API=https://103.180.137.113/
+REACT_APP_API=http://103.180.137.113/
 
 REACT_APP_LOCALHOST_ACOUNT_DB=EVENT_AcountDB
 REACT_APP_LOCALHOST_ACOUNT_USER=EVENT_AcountUSER
