--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^4.1.17",
     "history": "^4.7.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "primeicons": "^5.0.0",
     "primereact": "^8.7.0",
     "react": "^17.0.2",
